apps/nzbhydra2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbhydra2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbhydra2
  template:
    metadata:
      labels:
        app: nzbhydra2
    spec:
      volumes:
      - name: nzbhydra2-config
        persistentVolumeClaim:
          claimName: nzbhydra2-iscsi-pvc
      - name: nzbhydra2
        persistentVolumeClaim:
          claimName: nzbhydra2
      containers:
      - name: nzbhydra2
        # IMAGE=ghcr.io/linuxserver/nzbhydra2; skopeo --override-os linux list-tags "docker://${IMAGE}" | jq -r '.Tags[]' | sort -V | tail -n1
        # image: ghcr.io/linuxserver/nzbhydra2:version-v7.15.3
        image: alpine
        command: [ "sleep" ]
        args: [ "infinity" ]
        volumeMounts:
        - name: nzbhydra2-config
          subPath: config
          mountPath: /config-iscsi
        - name: nzbhydra2-config
          subPath: config
          mountPath: /config
        ports:
        - containerPort: 5076
          name: http
        # livenessProbe:
        #   httpGet:
        #     port: http
        #     path: /internalapi/control/ping
        #   periodSeconds: 10
        #   failureThreshold: 3
        # startupProbe:
        #   httpGet:
        #     port: http
        #     path: /internalapi/control/ping
        #   periodSeconds: 10
        #   failureThreshold: 30
