apps/nzbhydra2/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.33.4-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: nzbhydra2
spec:
  selector:
    app: nzbhydra2
  ports:
  - name: http
    port: 80
    targetPort: http
