apps/nzbhydra2/ingress-tailscale.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.33.4-standalone-strict/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbhydra2-tailscale
  annotations:
    tailscale.com/proxy-group: heimdall
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - billowy-voice
  defaultBackend:
    service:
      name: nzbhydra2
      port:
        name: http
  ingressClassName: tailscale
